--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Savelyeva_A <Aliaksandra.Savelyeva@ibm.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pandas = "^1.4.2"
+pandas = "1.3.5"
 sklearn = "^0.0"
 scikit-learn = "^1.0.2"
 numpy = "^1.22.3"
