--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ sklearn = "^0.0"
 scikit-learn = "^1.0.2"
 numpy = "^1.22.3"
 pandas-profiling = "^3.1.0"
+click = "^8.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
