--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ scikit-learn = "^1.0.2"
 numpy = "^1.22.3"
 pandas-profiling = "^3.1.0"
 click = "^8.1.3"
+mlflow = "^1.25.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
