--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ mlflow = "^1.25.1"
 pytest = "^5.2"
 black = "^22.3.0"
 flake8 = "^4.0.1"
+mypy = "^0.950"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
