--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest = "^5.2"
 black = "^22.3.0"
 flake8 = "^4.0.1"
 mypy = "^0.950"
+nox = "^2022.1.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
