model test added

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,8 @@ max-line-length = 119
 
 [mypy]
 ignore_missing_imports = True
+
+[tool:pytest]
+filterwarnings =
+    ignore::UserWarning
+    ignore::DeprecationWarning
