--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ numpy = "^1.22.3"
 pandas-profiling = "^3.1.0"
 click = "^8.1.3"
 mlflow = "^1.25.1"
+nox = "^2022.1.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
