--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -4,4 +4,11 @@ jobs:
   run-tests-on-push:
     runs-on: windows-latest
     steps:
-      - run: poetry run pytest
+      - uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
+
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
