--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -12,3 +12,12 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.9
+
+      - name: Install Poetry Action
+        uses: snok/install-poetry@v1.3.1
+
+      - name: Install Dependencies
+        run: poetry install
+
+      - name: Run nox
+        run: poetry run nox
