--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,10 @@
 [flake8]
-exclude = .git,*migrations*
+exclude =
+    .git
+    *migrations*
+    env
+    .env
+    .nox
 max-line-length = 119
 
 [mypy]
